--- a/cap2_conocimiento_logica_y_lenguaje/tcii_ch2.tex
+++ b/cap2_conocimiento_logica_y_lenguaje/tcii_ch2.tex
@@ -1,4 +1,4 @@
-% Created 2023-05-25 dj. 16:19
+% Created 2023-05-25 dj. 16:23
 % Intended LaTeX compiler: pdflatex
 \documentclass[a4paper, 11pt, twocolumn, spanish]{article}
 \usepackage[utf8]{inputenc}
@@ -17,12 +17,11 @@
 \setlength\parindent{0pt}
 \author{Jordi Serra}
 \date{\today}
-\title{El Helenismo\\\medskip
-\large Apuntes de Teoría del Conocimiento ii.\\
-Conocimiento, Lógica y Lenguaje}
+\title{Apuntes de Teoría del Conocimiento ii\\\medskip
+\large Conocimiento, Lógica y Lenguaje}
 \hypersetup{
  pdfauthor={Jordi Serra},
- pdftitle={El Helenismo},
+ pdftitle={Apuntes de Teoría del Conocimiento ii},
  pdfkeywords={},
  pdfsubject={},
  pdfcreator={Emacs 28.2 (Org mode 9.5.5)}, 
@@ -34,9 +33,9 @@ Conocimiento, Lógica y Lenguaje}
 
 
 \section{Introducción}
-\label{sec:org026d571}
+\label{sec:orgf153df7}
 \subsection{Lenguaje y realidad}
-\label{sec:orge699822}
+\label{sec:org3c330d2}
 Se entiende por lenguaje, en un sentido amplio, cualquier medio de
 comunicación entre seres vivientes. Bajo este concepto se incluyen
 lenguajes de palabra, medios de comunicación humano de tipo no
@@ -84,7 +83,7 @@ como terreno común que todos reconocen y que liga entre sí a todos los
 que hablan.
 
 \subsection{El lenguaje como forma de vida}
-\label{sec:org8ef068e}
+\label{sec:orgf172404}
 El lenguaje cumple una función simbolizadora constituyente de un
 cosmos de objetos que es un mundo de significados actualizados en un
 discurso. Nos relacionamos con la realidad a través del
@@ -105,7 +104,7 @@ un lenguaje universal de signos y de signos artificiales definidos
 unívocamente.
 
 \subsection{Conocimiento y lenguaje en la obra de Wittgenstein}
-\label{sec:org156dcbd}
+\label{sec:org97ce863}
 La obra de Wittgenstein (W.) es un punto de referencia básico para la
 comprensión de la filosofía contemporánea en su conjunto. Su
 pensamiento tiene \textbf{dos etapas} diferenciadas por sus dos obras más
@@ -113,7 +112,7 @@ importantes: (\emph{i}) el \emph{tractatus logico-philosophicus} (1921) y (\emph
 \emph{Investigaciones filosóficas} (1935-1945).
 
 \subsubsection{Filosofía y ciencia}
-\label{sec:org1e48bdc}
+\label{sec:org349cb10}
 En el \emph{tractatus logico-philosophicus} (1921) presenta las nociones
 básicas que tendrán una gran influencia en el círculo de Viena y de su
 filosofía neopositivista. Esto es, solo los enunciados formales de la
@@ -150,7 +149,7 @@ de los enunciados en que se ha estado expresando.
 \end{itemize}
 
 \subsubsection{Significado y reglas de uso del lenguaje}
-\label{sec:org2dd2738}
+\label{sec:orgdab613e}
 Este planteamiento no es fijo dentro del pensamiento de W. ya que en
 \emph{Investigaciones filosóficas} se retracta de esta reducción de la
 diversidad del discurso a proposiciones categóricas, ligadas entre sí
@@ -182,9 +181,9 @@ contexto. El sentido lo dan las reglas de uso, como las piezas en el
 ajedrez y las reglas de movimiento.
 
 \section{El proyecto epistemológico del \emph{tractatus}}
-\label{sec:org98b5db7}
+\label{sec:orgb2488d8}
 \subsection{El sentido del lenguaje no puede ser expresado por el lenguaje}
-\label{sec:org8e7900f}
+\label{sec:orgf6034b3}
 Russell (R.) sostenía una doctrina ontológica que decía que, al final
 del análisis, existe en el universo, están hechos atómicos. Esta
 doctrina es deductiva, no empírica, desde un análisis no-empírico del
@@ -215,9 +214,9 @@ muestra su carácter autonegador y la falta de sentido de sus propias
 afirmaciones.
 
 \subsection{La proposición como unidad de significado}
-\label{sec:orgcb363a7}
+\label{sec:org45e9d45}
 \subsubsection{La teoría \emph{pictórica} del conocimiento}
-\label{sec:org4d57ed1}
+\label{sec:org895cc6a}
 Para Wittgenstein, la \textbf{unidad de significado} es la proposición misma,
 no el término singular. La palabra tiene significado como parte de una
 proposición, no por sí misma. Una proposición es una representación
@@ -273,7 +272,7 @@ estados de cosas, la otra ninguno.
 \end{quote}
 
 \subsubsection{La reafirmación del empirismo}
-\label{sec:org1969ed6}
+\label{sec:org2132831}
 Para decir si una proposición es verdadera o falsa, se debe siempre
 compararla con la realidad. Es imposible decir sólo si desde la
 representación si ella misma es verdadera o falsa. No hay
@@ -297,7 +296,7 @@ atómicas. Cualquier reflexión que sobre los hechos quiera hacerse
 resulta una imposibilidad lógica.
 
 \subsection{La distinción entre lo dicho y lo mostrado}
-\label{sec:orgfe0c6f5}
+\label{sec:org2c2bb30}
 Wittgenstein distingue entre lo dicho y lo mostrado, la relación entre
 el lenguaje y los hechos puede demostrarse pero no decirse. El
 positivismo lógico no concibe esta distinción, no hay otra realidad
@@ -328,9 +327,9 @@ El neopositivismo lógico, se propondrá como objetivo demostrar que
 toda metafísica carece de sentido.
 
 \section{Conocimiento y juegos de lenguaje}
-\label{sec:org8a61c20}
+\label{sec:org6ad9d4b}
 \subsection{Wittgenstein se retracta}
-\label{sec:orgd101e36}
+\label{sec:org88367e0}
 Entre la publicación del tractatus en 1921 y la publicación de su gran
 obra \emph{investigaciones filosóficas} en 1953, W. no publica nada excepto
 un pequeño artículo. Desde entocnes, W. quiso que el \emph{tractatus} y las
@@ -363,9 +362,9 @@ social. Así, el pensamiento no es anterior ni esencialmente diferente
 del lenguaje, sino que de él deriva y lo presupone.
 
 \subsection{La irreductible diversidad de los usos del lenguaje}
-\label{sec:orgb20e8ad}
+\label{sec:org3a449dc}
 \subsubsection{El fin del privilegio de la teoría}
-\label{sec:org97bf78f}
+\label{sec:org22939cb}
 El principio básico en las \emph{investigaciones} es que no existe un
 lenguaje ideal que refleje los únicos hechos existentes, aquellos que
 puedan ser verificados, sino que hay multitud de lenguajes que no
@@ -393,7 +392,7 @@ teórica es una ilusión y un abuso. La descripción teórica unifica y
 homogeneiza a costa de negar la diversidad y el cambio.\\
 
 \subsubsection{No hay ningún universo de sentido inmutable}
-\label{sec:orgfbad37c}
+\label{sec:orgbf25239}
 Lo que caracteriza a los juegos de lenguaje es su carácter social,
 público, el hecho de ser compartidos por un determinado número de
 hablantes que juegan el mismo juego y observan las mismas reglas de
@@ -415,9 +414,9 @@ más allá de la cual no tiene sentido buscar un fundamento único. Esos
 juegos de lenguaje se practican, cambian y, hasta, desaparecen.\\
 
 \subsection{El significado es el uso}
-\label{sec:org127a730}
+\label{sec:org4d2d89c}
 \subsubsection{El abandono del modelo referencial}
-\label{sec:orgc2282ca}
+\label{sec:orgcc892c0}
 Así pues, W. rompe con el núcleo filosófico de su tractatus y el eje
 de la tradición filosófica desde Platón a Husserl. En general, la
 filosofía ha basado el significado en una relación que refiere a las
@@ -438,7 +437,7 @@ mundo material, aparente y cambiante del lenguaje, al mundo
 espiritual, racional e inmutable de la realidad.
 
 \subsubsection{Describir en lugar de explicar}
-\label{sec:orge40cf84}
+\label{sec:org3b8ff1f}
 No se trata de estudiar el lenguaje para hacerlo científico, sino de
 verlo tal cual es y descubrir el uso y función de los lenguajes que
 empleamos en cada situación, si realmente queremos comprender el
@@ -489,7 +488,7 @@ conclusiones que engendraron el afán de convertirla en un lenguaje
 ideal. Dejar las cosas como están y tratar de ver como son.
 
 \subsection{Lenguaje, conocimiento y realidad}
-\label{sec:orga46ae32}
+\label{sec:org9010ed5}
 Algunas dudas emergen en relación a la relación entre lenguaje y
 realidad respecto de la última posición de Wittgenstein. Por un lado
 busca una fundación de los juegos llamados secundarios del lenguaje
@@ -506,7 +505,7 @@ de verticalidad entre los juegos de lenguaje y la realidad, no sólo
 entre los juegos de lenguaje, pero también entre estos y la realidad.
 
 \subsubsection{La verdad como coherencia interna}
-\label{sec:org8619b61}
+\label{sec:orgb2b2f4d}
 Superada la teoría pictórica (\emph{tractatus}) y que se basaba en el
 supuesto de una homología entre proposiciones y realidad, la
 introducción del concepto de juego y el reconocimiento de una
@@ -545,7 +544,7 @@ coherencia de unas conexiones y de unas relaciones en un sistema que
 nada tienen que ver con la descripción de unos contenidos.
 
 \subsubsection{La objetividad de un operar común}
-\label{sec:org0a5aa48}
+\label{sec:orgbc5586d}
 Este proceso de reducción del lenguaje a su completa convencionalidad
 y formalización es un proceso inexorable. Porque las reglas del
 lenguaje y su uso son convencionales, su operar resulta inexorable y
@@ -568,7 +567,7 @@ y comunicable una expresión por el hecho de someterla a un orden e
 integrarla a un juego común.
 
 \subsubsection{La filosofía como terapia del lenguaje}
-\label{sec:orgb3b5581}
+\label{sec:org4ceea86}
 Wittgenstein resalta con insistencia el carácter de pura
 convencionalidad que tienen los lenguajes, librándonos de la aureola
 de lo ideal como trasmundo de lo real. Esto significó un giro
@@ -607,7 +606,7 @@ propio concepto de juego como convencionalidad inexorable ya
 representa.
 
 \subsubsection{El problemático lugar de la crítica}
-\label{sec:org5325641}
+\label{sec:org49d52a7}
 Como análisis filosófico de un juego de lenguaje, sólo le corresponde
 delimitar su espacio operativo en su inexorable efectividad,
 describirlo en su funcionalidad práctica y señalar el tipo de terapia
@@ -654,7 +653,7 @@ Esto hace difícil concebir usos diversos del juego lingüístico llamado
 normal.
 
 \subsection{La experiencia del mundo como un todo limitado}
-\label{sec:orgdf86a2f}
+\label{sec:org7cc4260}
 En la obra de W. se insiste de la impotencia de la filosofía para
 transformar nada. La filosofía no puede afectar al lenguaje que
 analiza, ni puede producir nuevas experiencias. La filosofía sólo
