--- a/cap3-la_nueva_filosofia_de_la_ciencia/tcii_ch3.tex
+++ b/cap3-la_nueva_filosofia_de_la_ciencia/tcii_ch3.tex
@@ -1,4 +1,4 @@
-% Created 2023-05-25 dj. 17:53
+% Created 2023-05-25 dj. 22:55
 % Intended LaTeX compiler: pdflatex
 \documentclass[a4paper, 11pt, twocolumn, spanish]{article}
 \usepackage[utf8]{inputenc}
@@ -24,7 +24,7 @@
  pdftitle={Apuntes de Teoría del Conocimiento ii},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 28.2 (Org mode 9.5.5)}, 
+ pdfcreator={Emacs 27.1 (Org mode 9.6.2)}, 
  pdflang={English}}
 \begin{document}
 
@@ -33,16 +33,16 @@
 
 
 \section{Introducción}
-\label{sec:org8509c00}
+\label{sec:org3dd3606}
 \subsection{El final del modelo clásico de cientificidad}
-\label{sec:orgfe6443a}
+\label{sec:org439ec82}
 En las últimas décadas del s. XX hubo un profundo cambio en el ideal
 clásico de cientificidad. Se ha perdido el sentido lineal y
 acumulativo del devenir científico y se ha introducido la acción
 humana en la historia de la ciencia. La ciencia deja de ser un
 lenguaje perfecto. El mito de la presunta superioridad objetiva de la
 ciencia se viene abajo , al quedar de manifiesto la inserción de la
-elección en la práctica científica cotidiana.\\
+elección en la práctica científica cotidiana.\\[0pt]
 
 El ideal clásico de cientificidad estaba representado por el
 neopositivismo lógico. En contraposición a éste, podemos simplificar
@@ -65,11 +65,11 @@ una metodología que haga posible una comparación entre ellas.
 \end{enumerate}
 
 \subsection{Teoría de la ciencia y práctica científica}
-\label{sec:orga855db6}
+\label{sec:orgeb7e84a}
 Hasta la fecha, se sostenía que las proposiciones verdaderamente
 científicas debían fundarse bien en la intuición (Descartes), bien en
 relaciones de observación (Locke), bien en principios sintéticos a
-priori (Kant).\\
+priori (Kant).\\[0pt]
 
 Durante el s. XIX, el auge de las ciencias atrae la atención hacia el
 estudio de sus métodos de trabajo y a su historia misma, desviándose
@@ -77,7 +77,7 @@ de este punto de vista. La aparición del círculo de Viena, enfatizando
 el conocimiento positivo, basado únicamente en la observación sensible
 de los hechos y en la lógica formal como instrumento de análisis
 (según el modelo de Russell), vuelve a restablecer la vigencia de las
-tesis clásicas en teoría de la ciencia.\\
+tesis clásicas en teoría de la ciencia.\\[0pt]
 
 Para los positivistas lógicos las proposiciones básicas, en las que se
 expresan las observaciones de la ciencia experimental, pueden servir
@@ -85,14 +85,14 @@ de base a generalizaciones cada vez más amplias.  Intentan formular la
 relación de confirmación entre una hipótesis y una proposición que
 exprese una evidencia. Esta corriente surge como una reacción frente a
 la retórica y las abstracciones de cierta filosofía basada en el rigor
-matemático de los lógicos.\\
+matemático de los lógicos.\\[0pt]
 Se tiene una clara imagen del estado de la ciencia en cada etapa. Se
 empieza a partir de los hechos establecidos y se hace uso de los modos
 de inferencia para llegar al nivel de las leyes y de las teorías. Se
 puede tener una conciencia exacta tanto de significación como de
 verdad, sobre el estado en que se está y sobre las relaciones de
 proposiciones de cada estado y los hechos a partir de los cuales se ha
-razonado.\\
+razonado.\\[0pt]
 
 Este método no se puede generalizar a cualquier proposición que se
 quiera saber si es verdadera o no. El principal fallo de esta
@@ -104,30 +104,30 @@ de una teoría general del conocimiento como había sido el caso en la
 tradición epistemológica clásica.
 
 \section{Principio de verificación y unificación del lenguaje científico. El círculo de Viena}
-\label{sec:orgeb30ab1}
+\label{sec:orge6e7353}
 \subsection{La división del discurso}
-\label{sec:org4f1479f}
+\label{sec:org15ea999}
 \subsubsection{El isomorfismo lenguaje-realidad según el \emph{Tractatus}}
-\label{sec:org7bd20f3}
+\label{sec:orgd9d7653}
 El \textbf{\emph{tractatus}} está escrito en forma de aforismos numerales según el
-sistema decimal y contiene siete proposiciones fundamentales.\\
+sistema decimal y contiene siete proposiciones fundamentales.\\[0pt]
 Las dos primeras \emph{El mundo es todo lo que acaece} y \emph{lo que acaece, el
 hecho, es la existencia de los hechos atómicos} se refieren al mundo y
-a la realidad.\\
+a la realidad.\\[0pt]
 Mientras que las cuatro siguientes son un desarrollo de la lógica y de
-teoría del lenguaje.\\
+teoría del lenguaje.\\[0pt]
 La última proposición, la enigmática frase De lo que no se puede
 hablar mejor es callarse, cierra el libro marcando el límite de lo que
-se puede pensar y decir (la proposición).\\
+se puede pensar y decir (la proposición).\\[0pt]
 Aunque la mayor parte del tractatus habla de la lógica y lenguaje (de
 la proposición), los párrafos iniciales tratan del mundo y de la
 visión metafísica del mundo en términos del atomismo lógico
-(Russell).\\
+(Russell).\\[0pt]
 El mundo es la totalidad de los hechos y el lenguaje es la totalidad
 de las proposiciones. Ambos comparten una estructura lógica común y
 Wittgenstein relaciona realidad, lógica y lenguaje mediante \textbf{tres
 conceptos fundamentales}: hecho atómico, figura lógica y
-proposición.\\
+proposición.\\[0pt]
 
 \begin{enumerate}
 \item Hechos atómicos. El constituyente último del mundo son los
@@ -165,6 +165,229 @@ son de dos clases:
 que nada dicen respecto del mundo. (o sus negaciones, las
 contradicciones.)
 \item Aquellas proposiciones que no comparten figura lógica con la
-realidad que prentenden representar.
+realidad que pretenden representar.
 \end{enumerate}
+
+Esto último sucede de dos maneras. Porque se la da a un signo un
+sentido falso, una mala orientación, construyendo enunciados que
+contienen signos carentes de significado, como sucede con las
+proposiciones mal construidas o con las de carácter metafísico. O
+porque apuntan a objetos que quedan fuera del mundo, trascienden el
+mundo, queriendo expresar lo inexpresable, como pasa con las
+proposiciones sobre ética y aquellas que quieren esclarecer el sentido
+del mundo, las proposiciones metafísicas.
+
+Así pues, sólo las proposiciones delas ciencias empíricas tienen
+sentido. La lógica consta únicamente de tautologías, y toda
+proposición sobre ética o metafísica es una proposición carente de
+sentido. El análisis filosófico ayuda a esclarecer el sentido de las
+proposiciones del lenguaje ordinario; las del lenguaje filosófico las
+declara carentes de sentido.
+
+\subsubsection{La ciencia habla de la realidad, la filosofía habla del lenguaje}
+\label{sec:orgcb098d8}
+El principal criterio de diferenciación consiste en afirmar que sólo
+la ciencia habla con legitimidad y sentido acerca dela realidad
+extra-lingüística, mientras que la filosofía sólo tiene la tarea de
+esclarecer, unificar, sistematizar y analizar el lenguaje
+científico. El trabajo científico produce la representación
+lingüística o simbólica adecuada a la realidad. La filosofía es una
+actividad de segundo orden, metalingüística, que tiene por objeto el
+lenguaje y el discurso de las ciencias. Sólo excluyendo la ambición
+ontológica o metafísica de la filosofía tradicional, puede asignares
+la labor a la filosofía de analizar con ayuda de la lógica formal el
+lenguaje científico de la ciencia.\\[0pt]
+
+Los \textbf{enunciados referenciales} son aquellos que se refieren a objetos
+que se pueden identificar. Poseen contenido y sentido. Si los objetos
+referidos no son lingüísticos los enunciados son \textbf{realistas u
+objetivos}. Si sí lo son, entonces se llaman \textbf{metalingüísticos}.\\[0pt]
+Uno de los objetivos principales del análisis lógico del lenguaje es
+descubrir a los enunciados metalingüísticos con apariencia realista y
+reformularlos correctamente a fin de que pongan claramente de
+manifiesto que se refieren a palabras y no a cosas.
+
+En el neopotivismo, la wittgensteiniana concepción pictórica del
+lenguaje se expresa mediante las siguientes distinciones.
+\begin{enumerate}
+\item Proposiciones con sentido y pseudoproposiciones. Sólo tiene
+sentido un enunciado que pueda ser calificado de verdadero o
+falso. La verificabilidad constituye el criterio del
+sentido. Cuando una palabra posee un significado, se dice que
+designa un concepto, mientras que si esta significación es sólo
+aparente y en realidad no a posee, entonces es un
+pseudoconcepto.\\[0pt]
+Las condiciones para que una proposición tenga significado son:
+\begin{itemize}
+\item Que las notas empíricas de los términos incluidos en la
+proposición sean conocidas.
+\item Que haya sido estipulado de qué proposiciones protocolarias es
+derivable la proposición a examinar.
+\item Que las condiciones de verdad para esa proposición hayan sido
+establecidas.
+\item Que dispongamos de un método de verificación.
+\end{itemize}
+
+\item Enunciados analíticos y enunciados empíricos. Para los
+neopositivistas, el principio de verificación se aplica a un
+enunciado sustancialmente de dos formas.
+\begin{itemize}
+\item Determinando su coherencia lógica interna mediante el análisis
+de la posibilidad de reducirlo a enunciados más elementales.\\[0pt]
+Se actúa así con los lenguajes formales con los que la verdad
+se decide sin recurrir a la experiencia porque es determinable
+a priori.\\[0pt]
+
+\item Recurriendo a la experiencia, que afecta a enunciados
+directamente referidos a la realidad y a los que integran las
+ciencias de la naturaleza.\\[0pt]
+Son enunciados cuya verificación requiere su confrontación con
+los hechos extralingüísticos a los que remiten.\\[0pt]
+Es una verificación empírica y a posteriori.
+\end{itemize}
+
+Los del primer tipo no aportan ninguna información verdaderamente
+que no estuviera ya comprendida en la sintaxis y la semántica del
+lenguaje utilizado. Están desprovista de sentido, como las
+tautologías en la lógica.\\[0pt]
+En cambio, los enunciados empíricos aportan informaciones sobre la
+realidad fáctica y extralingüística.\\[0pt]
+En cualquier caso, todo enunciado pertenece a una categoría o a la
+otra.\\[0pt]
+
+Una distinción de esta misma distinción es la que se establece
+entre leyes empíricas y leyes teóricas:
+\begin{enumerate}
+\item Leyes empíricas son las que pueden ser confirmadas
+directamente mediante observaciones empíricas. Son leyes
+acerca de hechos observables. Contienen términos que designan
+hechos observables por los sentidos.\\[0pt]
+Se las obtiene mediante la generalización de los resultados
+de observaciones.\\[0pt]
+No sólo incluyen leyes cualitativamente simples —todos los
+cuervos son negros—, sino también leyes cuantitativas que
+surgen de observaciones simples.\\[0pt]
+Se las usa para explicar hechos observados y predecir sucesos
+futuros observables.
+\item Leyes teóricas o hipotéticas son las que contienen términos
+que no se refieren a hechos observables. Son leyes acerca de
+entidades como moléculas. átomos, electrones, etc. que no
+pueden ser medidos de manera simple y directa.
+\end{enumerate}
+
+\item Enunciados que expresan juicios éticos o estéticos. Al considerar
+el lenguaje básicamente informativo se determinan como ilegítimos
+y sinsentido los enunciados que expresan sentimientos o
+valores.\\[0pt]
+Los preceptos morales sólo expresan emociones positivas o
+negativas respecto de acciones y de situaciones
+descriptibles. Estos usos lingüísticos no presentan interés para
+la ciencia no para la filosofía.\\[0pt]
+
+En esta posición radical en favor del discurso científico como
+idealmente objetivo y universal y este desprecio por las
+expresiones de la subjetividad explican la ausencia de compromiso
+filosófico y ético-político de esta filosofía con la
+sociedad. Sólo el desarrollo de la ciencia y del espíritu
+científico y analítico, lógico y objetivo, cabe esperar un
+progreso real para la humanidad. Mientras ese progreso se
+realiza, nadie está obligado a tomar posición en el terreno moral
+o político. Cualquier discurso filosófico o científico, que
+presenta valores o normas propiamente dichas como si se tratara
+de hechos objetivos o de realidades susceptibles de ser descritas
+de manera verdadera o falsa y de ser conocidas, cae en la falacia
+naturalista. Este sofisma consiste en la confusión entre hechos y
+valores, entre lo que es y lo que debe ser.
+\end{enumerate}
+
+
+\subsection{El lenguaje unificado de la ciencia}
+\label{sec:org1b4ee40}
+El ideal de una ciencia unificada es característico del pensamiento
+moderno desde Descartes, que se plantean construir una matemática
+universal. El neopositivismo retoma este objetivo y lo reformula en el
+plano del lenguaje. todas las ciencias han de tener en común la
+utilización de un lenguaje. Se espera la superación de la diversidad
+de las ciencias si se descubre o se construye ese lenguaje al que se
+puedan reconducir los diferentes lenguajes científicos. La unificación
+de las ciencias requiere la construcción de un lenguaje universal y
+unitario de la ciencia.\\[0pt]
+
+Carnap en \emph{La estructura lógica del mundo} (1928) defiende como
+condición básica de ese lenguaje que sus enunciados básicos se
+refieran a sensaciones y experiencias sensoriales y no a objetos
+físicos, que sólo son construcciones hipotéticas a partir de las
+sensaciones. Las cosas son elaboraciones lógicas que realizamos sobre
+la base de nuestro contenidos sensoriales. Lo propio de las
+proposiciones científicas debe ser la posibilidad de que puedan quedar
+reducidas a un lenguaje compuesto de símbolos de los contenidos
+sensoriales.\\[0pt]
+
+El problema es que garantiza la objetividad de la ciencia ni su
+exigencia universal. Se basaría en experiencias subjetivas de cada
+individuo, pudiendo diferir. Los enunciados básicos de este lenguaje
+no serían comunes más que en apariencia.\\[0pt]
+Neurah dió un giro distinto con su planteamiento fisicalista. El mundo
+está constituido por objetos que existen con independencia de mi
+experiencia. A esos objetos se refieren directamente los términos y
+enunciados del lenguaje científico. Construir un lenguaje básico para
+la ciencia representa descubrir los enunciados elementales y los
+objetos o hechos elementales constitutivos de la realidad. Luego se
+podrá traducir cualquier enunciado a ese lenguaje básico relativo a
+estados  procesos del mundo físico.\\[0pt]
+
+En el seno del fisicalismo, durante el s. XX se cuestiona la
+naturaleza referencial o realista de su propio lenguaje. Por otra
+parte, fracasa también en su empeño por reducir fisicalistamente el
+lenguaje de las ciencias humanas, como la psicología. El programa
+neopositivista de unificación de las ciencias por la unificación de
+sus lenguajes se queda en mera aspiración.
+
+\subsection{La crítica de la metafísica}
+\label{sec:org86cc4ea}
+El análisis lógico-positivo del lenguaje responsabiliza del sentido o
+bien a errores sintácticos en los enunciados, o bien a abusos
+semánticos. Es decir, son enunciados sin sentido aquellos en los que
+se combinan palabras que pertenecen a categorías diversas, pero que
+considerados por separado o utilizados correctamente, tienen
+significado. También son sin sentido los enunciados que incluyen
+palabras sin una referencia determinable, como los enunciados
+metafísicos.\\[0pt]
+
+El neopositivismo reduce la metafísica a un conjunto e errores
+sintácticos y de abusos semánticos del lenguaje. Desde la perspectiva
+lógica, los enunciados metafísicos o bien parecen despojados de
+sentido, o bien sin el sentido o el alcance que se les quiere
+atribuir.
+\begin{enumerate}
+\item La primera diferencia estaría en la ambivalencia misma de la
+palabra ser. A veces se utiliza como cópula que antecede a y se
+relaciona con un predicado —yo soy el autor de este libro—,
+mientras que en otras designa existencia —yo soy. Este error
+resulta agravado por el hecho de que los metafísicos carecen de
+una idea clara de esta ambivalencia.
+\item El segundo error está en la forma que adquiere el verbo en su
+segunda significación, la de existencia. Esta forma verbal
+muestra ficticiamente un predicado no existente. La existencia no
+es una propiedad. A este respecto sólo la lógica moderna sería
+totalmente consecuente al introducir el signo de existencia en
+una fórmula sintáctica tal que no puede ser referido como un
+predicado a signos de objeto, sino sólo a un predicado.
+\end{enumerate}
+
+Es decir, desde la antigüedad, la mayor parte de los metafísicos se
+habrían dejado seducir por la forma verbal de la palabra ser, formando
+pseudopreposiciones como \emph{yo soy}, \emph{Dios es}, etc. Pero lo
+característico de la actitud física sería un determinado modo de
+confusión de las palabras y las cosas. La labor del neopositivista
+frente a este lenguaje será reconducir sus proposiciones a
+descripciones o recomendaciones concernientes al lenguaje y su uso.
+La filosofía deja de ser metafísica para reducirse a metalingüística y
+transformarse en crítica y análisis lógicos del lenguaje. Este giro
+lingüístico debería permitir también a los filósofos entenderse,
+puesto que compartirían un punto de vista común (el metalingüístico) y
+una referencia común (el lenguaje).
+
+\section{Investigación científica y desarrollo del conocimiento: Popper}
+\label{sec:orgc11629a}
 \end{document}
